--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				</fieldset>
 			
 				<fieldset class="d-grid justify-content-center mt-4">
-					<button id="joinbutton" class="btn bg-light  border-primary-subtle text-primary" onclick="alert('완료!')" data-bs-dismiss="modal">회원가입</button>
+					<button id="joinbutton" class="btn bg-light  border-primary-subtle text-primary" onclick="alert('회원가입 완료!')" data-bs-dismiss="modal">회원가입</button>
 					
 				</fieldset>
 			</form>
