--- a/loginmain.html
+++ b/loginmain.html
@@ -24,6 +24,7 @@
         <i class="xi-emoticon-cool-o"></i>
        </p>
        <p class="h3 pt-2 bb text-warning font">Have a good day
+	   	<p id="name"></p>
         <i class="xi-heart"></i>
        </p>
 
@@ -37,5 +38,27 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
    <script src="background.js"></script>
+   <script type="text/javascript">
+   let queryString = window.location.search;
+   const urlParams = new URLSearchParams(queryString);
+   let index = urlParams.get('index');
+
+   if(index){
+		   console.log(index,'index');
+		   let info = JSON.parse(localStorage[index]);
+		   console.log(localStorage);
+
+		   let x = document.getElementById("name");
+		   x.innerText=info.id;
+
+
+
+   }else{
+		   console.log('로그인 정보가 없습니다.');
+
+   }
+
+
+   </script>
 </body>
 </html>
